cmake_minimum_required(VERSION 3.1)

add_executable(test_graph test_graph/test_graph.cpp)
add_executable(test_dfs test_graph/test_dfs.cpp)
add_executable(test_bfs test_graph/test_bfs.cpp)
add_executable(test_dfs_paths test_graph/test_dfs_paths.cpp)
add_executable(test_bfs_paths test_graph/test_bfs_paths.cpp)
add_executable(test_connected_component test_graph/test_connected_component.cpp)
add_executable(test_cycle test_graph/test_cycle.cpp)
add_executable(test_two_color test_graph/test_two_color.cpp)
add_executable(test_symbol_graph test_graph/test_symbol_graph.cpp)
add_executable(test_degree_of_separation test_graph/test_degree_of_separation.cpp)

add_executable(test_digraph test_digraph/test_digraph.cpp)
add_executable(test_digraph_dfs test_digraph/test_dfs.cpp)
add_executable(test_digraph_bfs test_digraph/test_bfs.cpp)
add_executable(test_digraph_dfs_paths test_digraph/test_dfs_paths.cpp)
add_executable(test_digraph_bfs_paths test_digraph/test_bfs_paths.cpp)
